--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "^12.0.5",
     "ionicons": "^7.4.0",
     "lucide-react": "^0.473.0",
