--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "swiper": "^11.2.1",
